return products
