# docs/api/api.yaml
@@ -97,7 +97,6 @@ paths:
       security:
         - api_key: []
 
-
   /v1/products/{id}/unpublish:
     post:
       operationId: "unpublish-product"
@@ -136,6 +135,47 @@ paths:
       security:
         - api_key: []
 
+  /v1/products/search:
+    post:
+      operationId: "search-product"
+      description: Search Product
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchProductRequest'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchProductResponse'
+      tags:
+        - Product
+
+  /v1/products/{id}:
+    get:
+      operationId: "get-product"
+      description: Return information about an product
+      parameters:
+        - in: path
+          name: id
+          description: ID of the product
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetProductResponse'
+      tags:
+        - Product
 
   /v1/pictures:
     post:
@@ -260,6 +300,10 @@ components:
     UpdateProductAttributeListRequest:
       type: object
       properties:
+        productId:
+          type: integer
+          format: int64
+          description: ID of the product created
         attributes:
           type: array
           items:
@@ -318,3 +362,177 @@ components:
       required:
         - url
 
+    GetProductResponse:
+      type: object
+      properties:
+        product:
+          type: object
+          $ref: "#/components/schemas/Product"
+
+    SearchProductRequest:
+      type: object
+      properties:
+        productIds:
+          type: array
+          items:
+            type: integer
+            format: int64
+        categoryIds:
+          type: array
+          items:
+            type: integer
+            format: int64
+        storeId:
+          type: integer
+          format: int64
+          nullable: true
+        limit:
+          type: integer
+          default: 100
+        offset:
+          type: integer
+          default: 0
+
+    SearchProductResponse:
+      type: object
+      properties:
+        products:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductSummary"
+
+    ProductSummary:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique identifier of the product
+        storeId:
+          type: integer
+          format: int64
+          description: ID of the merchant account
+        thumbnailUrl:
+          type: string
+          format: url
+          nullable: true
+        title:
+          type: string
+          description: Product title
+        summary:
+          type: string
+          description: Product summary
+          nullable: true
+        price:
+          type: integer
+          format: int64
+          description: Price of the product
+          nullable: true
+        comparablePrice:
+          type: integer
+          format: int64
+          description: Comparable Price of the product
+          nullable: true
+        categoryId:
+          type: integer
+          format: int64
+          description: ID of the category
+          nullable: true
+        currency:
+          type: string
+          description: Product's country
+        quantity:
+          type: integer
+          description: Quantity in stock
+          nullable: true
+        created:
+          type: string
+          format: date-time
+          description: Creation Date/Time
+        updated:
+          type: string
+          format: date-time
+          description: Last modification Date/Time
+        status:
+          type: string
+          enum:
+            - DRAFT
+            - PUBLISHED
+
+    Product:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique identifier of the product
+        storeId:
+          type: integer
+          format: int64
+          description: ID of the merchant account
+        thumbnail:
+          type: object
+          $ref: "#/components/schemas/PictureSummary"
+          nullable: true
+        pictures:
+          type: array
+          items:
+            $ref: "#/components/schemas/PictureSummary"
+        title:
+          type: string
+          description: Product title
+        summary:
+          type: string
+          description: Product summary
+          nullable: true
+        description:
+          type: string
+          description: Product long description
+          nullable: true
+        price:
+          type: integer
+          format: int64
+          description: Price of the product
+          nullable: true
+        comparablePrice:
+          type: integer
+          format: int64
+          description: Comparable Price of the product
+          nullable: true
+        currency:
+          type: string
+          description: Product's currency
+        quantity:
+          type: integer
+          description: Quantity in stock
+          nullable: true
+        created:
+          type: string
+          format: date-time
+          description: Creation Date/Time
+        updated:
+          type: string
+          format: date-time
+          description: Last modification Date/Time
+        status:
+          type: string
+          enum:
+            - DRAFT
+            - PUBLISHED
+        published:
+          type: string
+          format: date-time
+          description: Published modification Date/Time
+          nullable: true
+
+    PictureSummary:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: Unique identifier of the product
+        url:
+          type: string
+          format: url
+          description: URL of picture
