# src/main/kotlin/com/wutsi/marketplace/manager/dto/GetProductResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.marketplace.manager.dto
+
+public data class GetProductResponse(
+    public val product: Product = Product()
+)
