# src/main/kotlin/com/wutsi/marketplace/manager/dto/PictureSummary.kt
@@ -1,0 +1,9 @@
+package com.wutsi.marketplace.manager.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class PictureSummary(
+    public val id: Long = 0,
+    public val url: String = ""
+)
