# src/main/kotlin/com/wutsi/marketplace/manager/dto/SearchProductResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.marketplace.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchProductResponse(
+    public val products: List<ProductSummary> = emptyList()
+)
