# src/main/kotlin/com/wutsi/marketplace/manager/dto/UpdateProductAttributeListRequest.kt
@@ -2,9 +2,11 @@ package com.wutsi.marketplace.manager.dto
 
 import javax.validation.constraints.NotEmpty
 import javax.validation.constraints.NotNull
+import kotlin.Long
+import kotlin.collections.List
 
 public data class UpdateProductAttributeListRequest(
-    val productId: Long = -1,
+    public val productId: Long = 0,
     @get:NotNull
     @get:NotEmpty
     public val attributes: List<ProductAttribute> = emptyList()
